{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 56,
  "lineage": "ac22ec78-5a77-305f-e8fa-69dacd633a59",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0266ad47b614add74",
            "association_id": "eipassoc-0541cde75927bbf9a",
            "domain": "vpc",
            "id": "eipalloc-0266ad47b614add74",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0666d0cfa71ca10ad",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-44-198-236-31.compute-1.amazonaws.com",
            "public_ip": "44.198.236.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "healthapp-nat-eip"
            },
            "tags_all": {
              "Name": "healthapp-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "healthapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:internet-gateway/igw-09a11ae474cce5dd0",
            "id": "igw-09a11ae474cce5dd0",
            "owner_id": "114749311002",
            "tags": {
              "Name": "healthapp-igw"
            },
            "tags_all": {
              "Name": "healthapp-igw"
            },
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "healthapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114749311002:loadbalancer/app/healthapp-alb/7838a20dc8a9084b",
            "arn_suffix": "app/healthapp-alb/7838a20dc8a9084b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "healthapp-alb-1571435665.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:114749311002:loadbalancer/app/healthapp-alb/7838a20dc8a9084b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "healthapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-008d41230f5a6659c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0350ced83a2575ba1"
              },
              {
                "subnet_id": "subnet-086135edb4c380c8f"
              }
            ],
            "subnets": [
              "subnet-0350ced83a2575ba1",
              "subnet-086135edb4c380c8f"
            ],
            "tags": {
              "Name": "healthapp-alb"
            },
            "tags_all": {
              "Name": "healthapp-alb"
            },
            "vpc_id": "vpc-01739f4aaac8dc6ba",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1a",
            "aws_subnet.public_1b",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "healthapp_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114749311002:listener/app/healthapp-alb/7838a20dc8a9084b/d7a847d4789c5e12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:114749311002:targetgroup/healthapp-tg/2bdf3906f5dceec6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:114749311002:listener/app/healthapp-alb/7838a20dc8a9084b/d7a847d4789c5e12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:114749311002:loadbalancer/app/healthapp-alb/7838a20dc8a9084b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.healthapp_alb",
            "aws_lb_target_group.healthapp_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1a",
            "aws_subnet.public_1b",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "healthapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:114749311002:targetgroup/healthapp-tg/2bdf3906f5dceec6",
            "arn_suffix": "targetgroup/healthapp-tg/2bdf3906f5dceec6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:114749311002:targetgroup/healthapp-tg/2bdf3906f5dceec6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "healthapp-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "healthapp-tg"
            },
            "tags_all": {
              "Name": "healthapp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "healthapp_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0266ad47b614add74",
            "association_id": "eipassoc-0541cde75927bbf9a",
            "connectivity_type": "public",
            "id": "nat-05d53c49083ad6d35",
            "network_interface_id": "eni-0666d0cfa71ca10ad",
            "private_ip": "10.0.1.167",
            "public_ip": "44.198.236.31",
            "subnet_id": "subnet-086135edb4c380c8f",
            "tags": {
              "Name": "healthapp-nat"
            },
            "tags_all": {
              "Name": "healthapp-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.healthapp_igw",
            "aws_subnet.public_1a",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:route-table/rtb-05520d86354d99d8f",
            "id": "rtb-05520d86354d99d8f",
            "owner_id": "114749311002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05d53c49083ad6d35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthapp-private-rt"
            },
            "tags_all": {
              "Name": "healthapp-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.healthapp_igw",
            "aws_nat_gateway.healthapp_nat",
            "aws_subnet.public_1a",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:route-table/rtb-0e53c4dc183ce2565",
            "id": "rtb-0e53c4dc183ce2565",
            "owner_id": "114749311002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a11ae474cce5dd0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthapp-public-rt"
            },
            "tags_all": {
              "Name": "healthapp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.healthapp_igw",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e1eb1e4cccec238",
            "route_table_id": "rtb-05520d86354d99d8f",
            "subnet_id": "subnet-08697f9f6147ca6dd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.healthapp_igw",
            "aws_nat_gateway.healthapp_nat",
            "aws_route_table.private",
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db675204f77ea72a",
            "route_table_id": "rtb-05520d86354d99d8f",
            "subnet_id": "subnet-0b2bdf72116405208"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.healthapp_igw",
            "aws_nat_gateway.healthapp_nat",
            "aws_route_table.private",
            "aws_subnet.private_1b",
            "aws_subnet.public_1a",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5f3ac709fcd88be",
            "route_table_id": "rtb-0e53c4dc183ce2565",
            "subnet_id": "subnet-086135edb4c380c8f"
          },
          "dependencies": [
            "aws_internet_gateway.healthapp_igw",
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fd24c86c0b0e616",
            "route_table_id": "rtb-0e53c4dc183ce2565",
            "subnet_id": "subnet-0350ced83a2575ba1"
          },
          "dependencies": [
            "aws_internet_gateway.healthapp_igw",
            "aws_route_table.public",
            "aws_subnet.public_1b",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:security-group/sg-008d41230f5a6659c",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008d41230f5a6659c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "healthapp-alb-sg",
            "name_prefix": "",
            "owner_id": "114749311002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthapp-alb-sg"
            },
            "tags_all": {
              "Name": "healthapp-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:security-group/sg-0e58b0d4b9688416c",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e58b0d4b9688416c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d41230f5a6659c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "healthapp-ecs-sg",
            "name_prefix": "",
            "owner_id": "114749311002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthapp-ecs-sg"
            },
            "tags_all": {
              "Name": "healthapp-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:security-group/sg-02323c2d3d6330ed8",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02323c2d3d6330ed8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d41230f5a6659c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e58b0d4b9688416c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "healthapp-rds-sg",
            "name_prefix": "",
            "owner_id": "114749311002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthapp-rds-sg"
            },
            "tags_all": {
              "Name": "healthapp-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:subnet/subnet-08697f9f6147ca6dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08697f9f6147ca6dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114749311002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthapp-private-1a"
            },
            "tags_all": {
              "Name": "healthapp-private-1a"
            },
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:subnet/subnet-0b2bdf72116405208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2bdf72116405208",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114749311002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthapp-private-1b"
            },
            "tags_all": {
              "Name": "healthapp-private-1b"
            },
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:subnet/subnet-086135edb4c380c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086135edb4c380c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114749311002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthapp-public-1a"
            },
            "tags_all": {
              "Name": "healthapp-public-1a"
            },
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:subnet/subnet-0350ced83a2575ba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0350ced83a2575ba1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114749311002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthapp-public-1b"
            },
            "tags_all": {
              "Name": "healthapp-public-1b"
            },
            "vpc_id": "vpc-01739f4aaac8dc6ba"
          },
          "dependencies": [
            "aws_vpc.healthapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "healthapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114749311002:vpc/vpc-01739f4aaac8dc6ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2968ebe6a148848",
            "default_route_table_id": "rtb-0b6128668e66158c2",
            "default_security_group_id": "sg-013ef4174600b3f1d",
            "dhcp_options_id": "dopt-025bd4b4334d370b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01739f4aaac8dc6ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6128668e66158c2",
            "owner_id": "114749311002",
            "tags": {
              "Name": "healthapp-vpc"
            },
            "tags_all": {
              "Name": "healthapp-vpc"
            }
          }
        }
      ]
    }
  ]
}